# mimosa

./: .copier-answers.yml  .dockerignore  .env.example  .flake8  .gitignore  2023 November Transat Schedule.html  CHANGELOG.md  CONTRIBUTING.md  README-reference.md  README.md  gas_storage_incremental.duckdb  noxfile.py  popular_currency_rate_dollar.csv  pyproject.toml  sched.txt  sched2.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
etc/: SHIELDS.md
etc/dbt/gie/: dbt_project.yml  profiles.yml
etc/dbt/gie/models/: country.sql  gas_trace.sql  overview.md  sources.yml  storage_lvl_facility.sql  storage_lvl_facility.yml  storage_lvl_facility_a.sql  storage_lvl_facility_a.yml
src/mimosa/: __init__.py  cli.py  dateswithoutdata.py  dlt_wip.py  pipelines.py  tmp.py  utilities.py  wip.py  wip_incr.py  wip_missing_dates.py
src/mimosa/dbt/: dbt_project.yml  profiles.yml
src/mimosa/dbt/models/: country.yml
src/mimosa/schemas/export/: gas_storage.schema.yaml  gas_storage_v2.schema.yaml
src/mimosa/schemas/import/: gas_storage.schema.yaml  gas_storage_v2.schema.yaml
tests/: test_001.py
